# UniAZ

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
benches/: README.md  uniaz_bench.rs
src/: cipher.rs  lib.rs  main.rs
