[package]
name = "uniaz"
version = "0.1.3"
edition = "2021"
authors = ["Entlst <volyyig@gmail.com>"]
description = "Unify the Unicode chars into A-Z sequence"
documentation = "https://docs.rs/uniaz"
homepage = "https://github.com/Volyyig/uniaz"
repository = "https://github.com/Volyyig/uniaz"
readme = "README.md"
keywords = ["encryption", "unicode", "cipher", "obfuscation"]
categories = ["cryptography", "encoding"]
license = "MIT OR Apache-2.0"

[dependencies]
anybase = "0.2.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "uniaz_bench"
harness = false
